# LLMOps

./: README.md
artix_backend/: .gitignore  Cargo.toml  Dockerfile  deployment.yaml  service.yaml
artix_backend/src/: core.rs  main.rs
rs-model-frontend/: Dockerfile  package-lock.json  package.json
rs-model-frontend/app/: page.css  page.tsx
